--- a/index.html
+++ b/index.html
@@ -9,17 +9,57 @@
 		<link rel="stylesheet" href="style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+			rel="stylesheet" />
 		<title>Frontend Mentor | Huddle landing page with single introductory section</title>
 	</head>
 	<body>
-		Build The Community Your Fans Will Love Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine
-		discussion. Register
+		<main>
+			<header><img src="images/logo.svg" alt="Huddle logo" /></header>
+
+			<div class="mockup"></div>
+			<div class="hero__cta">
+				<h1><span>Build The Community</span> <span>Your Fans Will Love</span></h1>
+				<p>
+					Huddle re-imagines the way we build communities. You have a voice, but so does your
+					audience. Create connections with your users as you engage in genuine discussion.
+				</p>
+				<a class="hero__cta-btn" href="#">Register</a>
+			</div>
+
+			<ul role="navigation" aria-label="Social links">
+				<li>
+					<a href="#">
+						<span class="sr-only">Facebook</span>
+						<ion-icon name="logo-facebook"></ion-icon>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="sr-only">Twitter</span>
+						<ion-icon name="logo-twitter"></ion-icon>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<span class="sr-only">Instagram</span>
+						<ion-icon name="logo-instagram"></ion-icon>
+					</a>
+				</li>
+			</ul>
+		</main>
 
 		<footer>
 			<p class="attribution">
-				Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> | Coded by <a href="mailto:aatypic.design@gmail.com">Abeauzit-Tahiri Alexandre</a>.
+				Challenge by
+				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> |
+				Coded by <a href="mailto:aatypic.design@gmail.com">Abeauzit-Tahiri Alexandre</a>.
 			</p>
 		</footer>
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 	</body>
 </html>
