huddle landing page live 1.0

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<title>Frontend Mentor | Huddle landing page with single introductory section</title>
 	</head>
 	<body>
-		<main>
+		<main class="hero">
 			<header><img src="images/logo.svg" alt="Huddle logo" /></header>
 
-			<div class="mockup"></div>
+			<div class="hero__mockup"></div>
 			<div class="hero__cta">
 				<h1><span>Build The Community</span> <span>Your Fans Will Love</span></h1>
 				<p>
@@ -28,7 +28,7 @@
 				<a class="hero__cta-btn" href="#">Register</a>
 			</div>
 
-			<ul role="navigation" aria-label="Social links">
+			<ul class="hero__nav" role="navigation" aria-label="Social links">
 				<li>
 					<a href="#">
 						<span class="sr-only">Facebook</span>
